# IX-Vahdat

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ASSEMBLY_AND_COMMISSIONING.md  BUILD_TIERS_AND_BOM.md  HUMANITARIAN_SCOPE.md  NON_CLAIMS.md  REGULATORY_BOUNDARIES.md  REGULATORY_NOTICE.md  SAFETY_MODEL.md  SAFETY_POLICY.md
examples/site_configs/: synthetic_hold_for_testing_node.json  synthetic_reviewable_node.json
src/ix_vahdat/: __init__.py  asset_checks.py  awh.py  awh_scoring.py  bom.py  bundles.py  cli.py  domain.py  energy.py  energy_profile.py  failures.py  infrastructure.py  maintenance.py  power.py  quality.py  receipts.py  recharge.py  reserve.py  review.py  runbooks.py  site_readiness.py  treatment.py  version.py  water_use.py
tests/: test_asset_checks.py  test_atmospheric.py  test_awh.py  test_awh_scoring.py  test_bom.py  test_bundles.py  test_cli.py  test_docs_content.py  test_domain_models.py  test_energy.py  test_energy_profile.py  test_example_configs.py  test_failures.py  test_gate_invariants.py  test_infrastructure.py  test_maintenance.py  test_package_import.py  test_power.py  test_receipts.py  test_recharge.py  test_reserve.py  test_review.py  test_runbooks.py  test_site_readiness.py  test_treatment.py  test_water_use.py
